trustfall_core/src/resources/test_data/valid_queries/root_coercion.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Number(max: 10) {
        ... on Prime {
            value @output
        }
    }
}"#,
    arguments: {},
)
