trustfall_core/src/resources/test_data/parse_errors/fragment_spread.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Number(max: 5) {
        value @output

        ...foo
    }
}"#,
    arguments: {},
)
